<resources>
    <string name="app_name">Mars</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_drawer_name">Mars</string>
    <string name="nav_res_path">android.studio@android.com</string>

    <string name="action_settings">Settings</string>


    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>

    <string name="action_satellite">Satellite</string>
    <string name="action_terrain">Terrain</string>
    <string name="action_normal">Normal</string>
    <string name="your_places">Your Places</string>
    <string name="bicycles">Bicycles</string>
    <string name="transport">Transport</string>
    <string name="reference">Reference</string>
    <string name="other">Other</string>
    <string name="traffic_jams">Traffic jams</string>
    <string name="from">From</string>
    <string name="load_directions">Go</string>
    <string name="to">To</string>
    <string name="origin_place">From ...</string>
    <string name="destination_palce">To ...</string>
</resources>
